CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(kernel)

SEPARATE_ARGUMENTS(SPLIT_C_FLAGS UNIX_COMMAND "${CMAKE_C_FLAGS}")
ADD_CUSTOM_COMMAND(
    OUTPUT crti.o
    COMMAND ${CMAKE_C_COMPILER} ${SPLIT_C_FLAGS} -c ${CMAKE_CURRENT_SOURCE_DIR}/crti.c -o crti.o
    DEPENDS crti.c
)

ADD_CUSTOM_COMMAND(
    OUTPUT crtn.o
    COMMAND ${CMAKE_C_COMPILER} ${SPLIT_C_FLAGS} -c ${CMAKE_CURRENT_SOURCE_DIR}/crtn.c -o crtn.o
    DEPENDS crtn.c
)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -T ${CMAKE_CURRENT_SOURCE_DIR}/link.ld -Map=${CMAKE_BINARY_DIR}/kernel.map")

FILE(GLOB_RECURSE SRC_FILES_CXX "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

ADD_EXECUTABLE(${PROJECT_NAME} crti.o ${SRC_FILES_CXX} crtn.o)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE klibcpp)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)