CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(kernel)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} -T ${CMAKE_CURRENT_SOURCE_DIR}/link.ld")

FILE(GLOB_RECURSE SRC_FILES_CXX "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

ADD_EXECUTABLE(${PROJECT_NAME} $<TARGET_OBJECTS:crti> ${SRC_FILES_CXX} $<TARGET_OBJECTS:crtn>)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE icxxabi klibcpp libbus)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)