CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(klibcpp)

FILE(GLOB_RECURSE SRC_FILES_CXX "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_FILES_CXX})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "")

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)